--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -40,17 +40,17 @@
 	}
 	.custom-scroll {
 		scrollbar-width: thin;
-		scrollbar-color: theme('colors.gray.500') #1d1d1d;
+		scrollbar-color: theme('colors.blueGray.500') #1d1d1d;
 	}
 	.custom-scroll::-webkit-scrollbar {
 		height: 8px;
 		width: 8px;
 	}
 	.custom-scroll::-webkit-scrollbar-thumb {
-		background: theme('colors.gray.500');
+		background: theme('colors.blueGray.500');
 	}
 	.custom-scroll::-webkit-scrollbar-thumb:hover {
-		background: theme('colors.gray.400');
+		background: theme('colors.blueGray.400');
 	}
 	.custom-scroll::-webkit-scrollbar-track {
 		background: rgba(0, 0, 0, 0.07);
